@@ -24,6 +24,7 @@
     status bar show selected/visible
     debian build-from-source packages optimize CFLAGS=-O2
     new link use target of current selected file #112
+    context dialog value combo popup width #43
 0.8.5   2013-01-14:
     fix left-click ignored in Open context submenu #31 #228
     Dialog fix progress bar; add auto-pulse
